@@ -1,3 +1,10 @@
+Tue May  1 17:38:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/msvc_mpc_auto_compile.pl:
+          Added -project_root to override $ACE_ROOT as root to search for
+          solutions. This is needed when using this script in a flat directory
+          layout
+
 Tue May  1 12:52:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_sys_time.cpp:
